clusters/managed/media/plex/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: plex
  annotations:
    gethomepage.dev/app: immich
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Applications
    gethomepage.dev/href: https://media.trusted.nirmalhk7.com
    gethomepage.dev/icon: immich
    gethomepage.dev/name: Immich
    gethomepage.dev/widget.key: TOKEN
    gethomepage.dev/pod-selector: "milano.app=plex"
    gethomepage.dev/widget.type: immich
    gethomepage.dev/widget.url: /
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`media.trusted.nirmalhk7.com`)
      kind: Rule
      middlewares:
      - name: mgd-ratelimit
      - name: mgd-headervalidation
      services:
        - name: plex-plex-media-server
          port: 32400
    - match: Host(`media.trusted.nirmalhk7.com`) && Path(`/transmission`)
      kind: Rule
      services:
        - name: transmission-transmission-openvpn
          port: 80
    - match: Host(`media.trusted.nirmalhk7.com`) && Path(`/sonarr`)
      kind: Rule
      services:
        - name: sonarr
          port: 80
    - match: Host(`media.trusted.nirmalhk7.com`) && Path(`/jackett`)
      kind: Rule
      services:
        - name: jackett
          port: 80
    - match: Host(`media.trusted.nirmalhk7.com`) && Path(`/radarr`)
      kind: Rule
      services:
        - name: radarr
          port: 80
